[package]
name = "rustyreef"
version = "0.1.0"
authors = ["John Rudolf Lewis <johnrlewis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7.1"
log = "0.4"
pest = "2.1"
pest_derive = "2.1"
pretty_env_logger = "0.3"
